--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+#Environment Variable files
+ClothingApp/ClothingApp/EnvironmentVariable.cs
 # User-specific files
 *.rsuser
 *.suo
