--- a/Backend_ClothingApp/appsettings.json
+++ b/Backend_ClothingApp/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "MyDB": "Data Source=LAPTOP-8OLD4A8I\\SQLEXPRESS;Initial Catalog=clothingDB;User ID=sa;Password=helloanhan"
+    //"MyDB": "Data Source=LAPTOP-8OLD4A8I\\SQLEXPRESS;Initial Catalog=clothingDB;User ID=sa;Password=helloanhan"
+    "MyDB": "workstation id=ClothingDB.mssql.somee.com;packet size=4096;user id=hello5423_SQLLogin_1;pwd=ym2iu5zbhy;data source=ClothingDB.mssql.somee.com;persist security info=False;initial catalog=ClothingDB"
   },
   "Logging": {
     "LogLevel": {
